--- a/src/components/Home/Navbar/Navbar.css
+++ b/src/components/Home/Navbar/Navbar.css
@@ -27,7 +27,7 @@ a
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); */
+    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3 ); */
     position: fixed;
     top: 0;
     left: 0;
@@ -35,6 +35,8 @@ a
 
     transition: transform 0.3s ease-in-out;
     height: 55px;
+
+    /* background: ; */
 
 
   }
@@ -68,6 +70,20 @@ a
     text-decoration: none;
     color: white;
     height: 40px;
+  }
+  
+  .logo-login a img{
+    align-items: center;
+    text-decoration: none;
+    color: white;
+    height: 40px;
+  }
+
+  .logo-login a
+  {
+    display: flex;
+    justify-content: center;
+    margin-top:40px ;
   }
   
   .menu {
@@ -113,7 +129,7 @@ a
     font-size: 17px;
     font-family: 'Kanit', sans-serif;
     align-items: center;
-    margin-top: 20px;
+    /* margin-top: 20px; */
     transition: 0.3s;
     
   }
