--- a/src/components/Routes/Conductor/Booking.css
+++ b/src/components/Routes/Conductor/Booking.css
@@ -2,17 +2,25 @@
 /* Table */
 .styled-table {
     border-collapse: collapse;
-    margin: 25px 0;
+    /* margin: 25px 0; */
     font-size: 0.9em;
     font-family: sans-serif;
     min-width: 400px;
+    /* height: 445px; */
+    width: 720px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+.tablediv
+{
+    height: 445px;
+
 }
 
 .styled-table thead tr {
     background-color: #009879;
     color: #ffffff;
     text-align: left;
+    height: 41px;
 }
 
 
@@ -23,6 +31,7 @@
 
 
 .styled-table tbody tr {
+    height: 41px;
     border-bottom: 1px solid #dddddd;
 }
 
@@ -55,6 +64,53 @@
     
 }
 
+.pagination
+{
+    display: flex;
+    width: 100%;
+    margin-top: 12px;
+    /* justify-content: space-around; */
+}
+.pagination li a
+{
+    text-decoration: none;
+    color: white;
+    font-family: ubuntu;
+    font-size: 21px;
+}
+
+.pagination li
+{
+    margin: 0px 18px;
+    list-style: none;
+}
+
+.fa-play
+{
+    font-size: 21px;
+    /* margin-top: 12px; */
+    margin-right: 20px;
+    transform: rotate(180deg);
+    
+}
+
+.active
+{
+    /* background-color: pink; */
+    border: 2px solid white;
+    /* transition: 0.9s; */
+    
+}
+
+.play2
+{
+    margin-left: 20px;
+    margin-top: 5px;
+    transform: rotate(0deg);
+    
+}
+
+
 
 @media (max-width: 768px) 
 {
@@ -62,4 +118,78 @@
     {
         zoom: 0.75;
     }
+}
+
+
+
+/* Pagination */
+.item {
+    align-items: center;
+    color: #FFF;
+    cursor: pointer;
+    display: flex;
+    font-size: 14px;
+    height: 40px;
+    justify-content: center;
+    width: 40px;
+    border: 1px solid grey;
+    border-radius: 100px;
+    /* padding: 3px; */
+  }
+  
+  .disabled-page {
+    color: #808e9b;
+    /* background-color: gray  ; */
+  }
+  
+  .active {
+    border: solid 0px #fff;
+    background-color: #bb0052;
+    /* border-radius: 40px; */
+    color: #808e9b;
+  }
+  
+  .break-me {
+  }
+  
+  .next {
+    width: 40px;
+  }
+  
+  .pagination {
+    align-items: center;
+    /* background-color: #bb0052; */
+    display: flex;
+    flex-direction: row;
+    /* height: 60px; */
+    justify-content: center;
+    list-style-type: none;
+    position: relative;
+    /* width: 1000px; */
+  }
+  
+  .pagination-page {
+    font-weight: 700;
+  }
+  
+  .previous {
+
+    width: 40px;
+    /* padding: 1px; */
+  }
+
+  .react-date-picker__button__icon
+  {
+      stroke: white;      
+}
+
+.react-date-picker__clear-button
+{
+    display: none!important;
+}
+
+.select-date
+{
+    margin-top: 50px;
+    margin-left: 18px;
 }
