--- a/src/components/auth/auth.css
+++ b/src/components/auth/auth.css
@@ -19,14 +19,14 @@
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     max-width: 430px;
     width: 100%;
-    height: 500px;
+    height: 100%;
     padding: 30px;
     border-radius: 6px;
     background: #FFF;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     margin: auto;
-    margin-top: 100px;
+    margin-top: 40px;
 }
 
 header{
