--- a/src/components/Genral/inputSearch.css
+++ b/src/components/Genral/inputSearch.css
@@ -26,29 +26,38 @@
     color: blue;
     display: flex;
     align-items: center;
-    cursor: pointer;
+    /* cursor: pointer; */
     justify-content: space-between;
     color: blue;
     font-size: 17px;
     font-weight: bold;
+    opacity: 0;
     margin: 0;
   }
   
   .dropdown .dropdown-content {
     position: absolute;
-    top: 110%;
-    left: 0;
+    top: 69%;
+    /* left: -49%; */
     padding: 10px;
-    background: #fff;
-    box-shadow: 3px 3px 10px 6px rgba(0, 0, 0, 0.06);
+    background: transparent;
+    /* box-shadow: 3px 3px 10px 6px rgba(0, 0, 0, 0.06); */
     font-weight: 500;
     color: #333;
     width: 95%;
+    height: 100%;
+    /* opacity: 0.90; */
+
   }
   .dropdown .dropdown-content .dropdown-item {
     padding: 10px;
     cursor: pointer;
     transition: all 0.2s;
+    background: white;
+    /* width: 150%; */
+    margin-top: -2%;
+    margin-left: -5%;
+
   }
   .dropdown .dropdown-content .dropdown-item:hover {
     background: #f4f4f4;
