--- a/src/components/Routes/Conductor/Conductor.css
+++ b/src/components/Routes/Conductor/Conductor.css
@@ -60,6 +60,7 @@
     /* font-size: 30px; */
     font-weight: bold;
     margin: 0;
+    margin-top: 5px;
 }
 
 .srcinp img
@@ -128,4 +129,15 @@
     /* opacity: 0.7; */
 }
 
+
+#dropdown 
+{
+    color: grey;
+    font-weight: bold;
+    font-size: 16px;
+    border: transparent;
+    background-color: transparent;
+    margin: 17px 0;
+    text-align: center;
+}
 
