--- a/src/components/Genral/Genral.css
+++ b/src/components/Genral/Genral.css
@@ -76,6 +76,7 @@
 {
   text-decoration: none;
   margin-top: 0 ;
+  margin-left: 30px;
 }
 
 
@@ -94,3 +95,4 @@
   color: white;
   background-color: #bb0052;
 }
+
