--- a/src/components/Home/Navbar/Navbar.css
+++ b/src/components/Home/Navbar/Navbar.css
@@ -142,18 +142,23 @@ a
   }
   
   .get-started {
-    margin-top: 5px;
-    margin-right: 35px;
+
+    margin-top: 0 ;
+    margin-left: 30px;
   }
   
   .get-started button {
-    background-color: #bb0052;
-    color: white;
-    padding: 8px 16px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+    width: 180px;
+    padding: 4px;
+    height: 50px;
+    font-size: 16px;
     font-weight: bold;
+    align-items: center;
+    border: none;
+    /* border-radius:20px; */
+    cursor: pointer;
+    color: white;
+    background-color: red;
   }
   
   /* Mobile view styles */
