--- a/src/components/FeedBack/feedback.css
+++ b/src/components/FeedBack/feedback.css
@@ -1,9 +1,16 @@
 body {
-    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background: rgba(8, 8, 8, 0.65) url('../Services/serviceimg/Services.png');
   }
+
+.input-feedback
+{
+  height: 35px;
+  width:80%;
+  padding: 8px;
+}
+
 .feedback-form {
     max-width: 400px;
     margin: 0 auto;
