--- a/src/components/Services/service.css
+++ b/src/components/Services/service.css
@@ -131,11 +131,11 @@ body {
     }
     
     /* Additional styles for text or description */
-    h3, p {
+    /* h3, p {
       margin: 10px 0;
     }
     
-  
+   */
   
     /* FaqSection.css */
     .faq-container h1{
