--- a/src/components/auth/auth.css
+++ b/src/components/auth/auth.css
@@ -104,11 +104,11 @@ form{
     position: relative;
     height: 1px;
     width: 100%;
-    margin: 36px 0;
+    margin: 24px 0;
     background-color: #d4d4d4;
 }
 .line::before{
-    content: 'Or';
+    content: '';
     position: absolute;
     top: 50%;
     left: 50%;
