--- a/src/components/FeedBack/feedback.css
+++ b/src/components/FeedBack/feedback.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: rgba(8, 8, 8, 0.65) url('../Services/serviceimg/Services.png');
+    /* background: rgba(8, 8, 8, 0.65) url('../Services/serviceimg/Services.png'); */
   }
 
 .input-feedback
